--- a/chat/templates/chat/index.html
+++ b/chat/templates/chat/index.html
@@ -1,3 +1,4 @@
+<!-- chat/templates/chat/index.html -->
 <!DOCTYPE html>
 <html>
 <head>
@@ -6,10 +7,21 @@
 </head>
 <body>
     What chat room would you like to enter?<br>
-    <form method="POST">
-        {% csrf_token %}
-        <input id="room-name-input" name="name" type="text" size="100"><br>
-        <input id="room-name-submit" type="submit" value="Enter">
-    </form>
+    <input id="room-name-input" type="text" size="100"><br>
+    <input id="room-name-submit" type="button" value="Enter">
+
+    <script>
+        document.querySelector('#room-name-input').focus();
+        document.querySelector('#room-name-input').onkeyup = function(e) {
+            if (e.keyCode === 13) {  // enter, return
+                document.querySelector('#room-name-submit').click();
+            }
+        };
+
+        document.querySelector('#room-name-submit').onclick = function(e) {
+            var roomName = document.querySelector('#room-name-input').value;
+            window.location.pathname = '/chat/' + roomName + '/';
+        };
+    </script>
 </body>
 </html>
